base-cloud-formation/security-group.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Security Groups for Information Systems",
  "Parameters":{
    "VpcId":{
      "Description":"The VPC Id to create the security groups in",
      "Type":"String"
    }
  },
  "Resources":{
    "PingOnly":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"Ping Only",
        "VpcId":{
          "Ref":"VpcId"
        },
        "SecurityGroupIngress":[
          {
            "CidrIp":"0.0.0.0/0",
            "IpProtocol":"icmp",
            "FromPort":"-1",
            "ToPort":"-1"
          }
        ]
      }
    },
    "PrivateSsh":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"SSH From Private subnets Only",
        "VpcId":{
          "Ref":"VpcId"
        },
        "SecurityGroupIngress":[
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "CidrIp":"10.0.0.0/8"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "CidrIp":"172.16.0.0/12"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"22",
            "ToPort":"22",
            "CidrIp":"192.168.0.0/16"
          }
        ]
      }
    },
    "PrivateHttp":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"HTTP From Private subnets Only",
        "VpcId":{
          "Ref":"VpcId"
        },
        "SecurityGroupIngress":[
          {
            "CidrIp":"0.0.0.0/0",
            "IpProtocol":"icmp",
            "FromPort":"-1",
            "ToPort":"-1"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"80",
            "ToPort":"80",
            "CidrIp":"10.0.0.0/8"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"80",
            "ToPort":"80",
            "CidrIp":"172.16.0.0/12"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"80",
            "ToPort":"80",
            "CidrIp":"192.168.0.0/16"
          }
        ]
      }
    },
    "PrivateHttps":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"HTTPS From Private subnets Only",
        "VpcId":{
          "Ref":"VpcId"
        },
        "SecurityGroupIngress":[
          {
            "CidrIp":"0.0.0.0/0",
            "IpProtocol":"icmp",
            "FromPort":"-1",
            "ToPort":"-1"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"443",
            "ToPort":"443",
            "CidrIp":"10.0.0.0/8"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"443",
            "ToPort":"443",
            "CidrIp":"172.16.0.0/12"
          },
          {
            "IpProtocol":"tcp",
            "FromPort":"443",
            "ToPort":"443",
            "CidrIp":"192.168.0.0/16"
          }
        ]
      }
    }
  }
}
